# deserial-video-trimmer

./: .gitignore  MediaFile.hs  README.md  ShellSCripts.hs  random-video-trimmer.cabal  stack.yaml
app/: OptsTrimNTimes.hs  OptsTrimWithMaxDuration.hs  TrimNTimes.hs
src/: Concatenator.hs  FilePath.hs  Files.hs  MediaFile.hs  Scripts.hs  ShellSCripts.hs  ShellScripts.hs  Utils.hs  VideoTrimmer.hs
