name:                random-video-trimmer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/random-video-trimmer#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolay Spesivtsev
maintainer:          nicola.spesivcev@gmail.com
copyright:           2017 Nicolay Spesivtsev
category:            Art
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , MediaFile
                     , ShellScripts
                     , VideoTrimmer
                     , FilePath
  build-depends:       base >= 4.7 && < 5
                     , safe
                     , containers
                     , system-filepath
                     , MonadRandom
                     , text
                     , random
                     , shelly
                     , transformers
                     , transformers-compat
                     , resourcet
                     , conduit
                     , conduit-combinators
                     , filepath
                     , cmdargs
  default-language:    Haskell2010

executable random-video-trimmer-exe
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , random-video-trimmer
  default-language:    Haskell2010

test-suite random-video-trimmer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , random-video-trimmer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/random-video-trimmer
